samples/_failures_safe/1761668331_e2187b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_409a38e9.c: In function ‘main’:
./samples/SAFE/__tmp_409a38e9.c:134:8: error: expected ‘;’ at end of input
  134 |     len
      |        ^
      |        ;
./samples/SAFE/__tmp_409a38e9.c:134:5: error: expected declaration or statement at end of input
  134 |     len
      |     ^~~
